--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Gallery</string>
+    <string name="app_name">Галерея</string>
+    <string name="description">Какое-то описание</string>
+    <string name="enter_tv">Вход</string>
+    <string name="login_hint">Логин</string>
+    <string name="password_hint">Пароль</string>
+    <string name="enter_btn">Войти</string>
 </resources>
