--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="login_hint">Логин</string>
     <string name="password_hint">Пароль</string>
     <string name="enter_btn">Войти</string>
+    <string name="empty_field">Поле не может быть пустым</string>
+    <string name="incorrect_login">Не верный формат номера телефона</string>
+    <string name="incorrect_password">Пароль должен быть от 6 до 255 символов</string>
 </resources>
