--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="empty_field">Поле не может быть пустым</string>
     <string name="incorrect_login">Не верный формат номера телефона</string>
     <string name="incorrect_password">Пароль должен быть от 6 до 255 символов</string>
+    <string name="user_not_found">Логин или пароль введен неправильно</string>
 </resources>
